# sfml-space-shooter

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/fonts/: Licence.txt
cmake/: setup_ccache.cmake  setup_compilers.cmake  setup_cpp_standard.cmake
src/: main.cpp
src/private/core/: actor.cpp  app.cpp  object.cpp  phase.cpp  stage.cpp
src/private/game/: intro.cpp  intro_phase.cpp
src/public/core/: actor.hpp  app.hpp  object.hpp  phase.hpp  stage.hpp
src/public/game/: intro.hpp  intro_phase.hpp
